PRAGMA foreign_keys=OFF;
BEGIN TRANSACTION;
CREATE TABLE IF NOT EXISTS "migrations" ("id" integer primary key autoincrement not null, "migration" varchar not null, "batch" integer not null);
INSERT INTO migrations VALUES(1,'0001_01_01_000000_create_users_table',1);
INSERT INTO migrations VALUES(2,'0001_01_01_000001_create_cache_table',1);
INSERT INTO migrations VALUES(3,'0001_01_01_000002_create_jobs_table',1);
INSERT INTO migrations VALUES(4,'2026_05_30_000002_create_pet_care_tables',1);
INSERT INTO migrations VALUES(5,'2026_06_05_170027_create_roles_table',1);
INSERT INTO migrations VALUES(6,'2026_06_05_170029_create_role_user_table',1);
INSERT INTO migrations VALUES(7,'2026_06_07_155900_add_staff_roles_to_users_table',1);
INSERT INTO migrations VALUES(8,'2026_06_09_000000_add_is_active_to_users_table',1);
CREATE TABLE IF NOT EXISTS "users" ("id" integer primary key autoincrement not null, "name" varchar not null, "email" varchar not null, "email_verified_at" datetime, "password" varchar not null, "role" varchar not null default 'pet_owner', "provider_type" varchar, "phone" varchar, "bio" text, "avatar" varchar, "is_verified" tinyint(1) not null default '0', "latitude" numeric, "longitude" numeric, "certification" varchar, "remember_token" varchar, "created_at" datetime, "updated_at" datetime, "is_active" tinyint(1) not null default '1');
INSERT INTO users VALUES(1,'Administrator','admin@petcare.com',NULL,'$2y$12$plW3IAs0rsAloEedgAfkBetOya.Hja0TrooW3oMlFKqe1mJsrFkhO','admin',NULL,NULL,NULL,NULL,1,NULL,NULL,NULL,NULL,'2026-06-12 12:47:00','2026-06-12 12:47:00',1);
INSERT INTO users VALUES(2,'Budi Santoso','owner@petcare.com',NULL,'$2y$12$q6UuOuYsI/xa2meIB/OojucgO.OLXZMV6eG16PXuxh7D.KF37i/Mm','pet_owner',NULL,'081234567890','Pecinta kucing dan anjing setia.','avatars/owner-avatar.svg',1,NULL,NULL,NULL,NULL,'2026-06-12 12:47:01','2026-06-12 12:47:01',1);
INSERT INTO users VALUES(3,'Indra Grooming','provider@petcare.com',NULL,'$2y$12$AniXHIXcrjddlpvLgbWmKugCEwBkkBAwV/YcBqos3YhLCci47cZL6','service_provider','groomer','08987654321','Groomer profesional berpengalaman 5 tahun untuk anjing dan kucing.','avatars/groomer-indra.svg',1,-6.26149999999999984,106.810500000000004,NULL,NULL,'2026-06-12 12:47:01','2026-06-12 12:47:01',1);
INSERT INTO users VALUES(4,'Drh. Sarah Wijaya','doctor@petcare.com',NULL,'$2y$12$ojVqNUQzuaC9oPv3JKdndunexlkFS.Dj9IjAIafTZBfHJ13hR8KCe','service_provider','veterinarian','08771234567','Dokter spesialis hewan kecil lulusan IPB. Menyediakan konsultasi dan pengobatan umum.','avatars/vet-sarah.svg',1,-6.24150000000000026,106.8305,'certifications/sertifikat-drh-sarah-wijaya.svg',NULL,'2026-06-12 12:47:01','2026-06-12 12:47:01',1);
INSERT INTO users VALUES(5,'Drh. Toni Hartono','unverified-vet@petcare.com',NULL,'$2y$12$s0VT9zS5DoDJz2B2.XxyiOBw/slk6u6qFyPO980JJmpOxRVl.R8H6','service_provider','veterinarian','085522223333','Dokter hewan senior. Membutuhkan persetujuan sertifikasi berkas.','avatars/vet-toni.svg',0,NULL,NULL,'certifications/sertifikat-drh-toni-hartono.svg',NULL,'2026-06-12 12:47:02','2026-06-12 12:47:02',1);
CREATE TABLE IF NOT EXISTS "password_reset_tokens" ("email" varchar not null, "token" varchar not null, "created_at" datetime, primary key ("email"));
CREATE TABLE IF NOT EXISTS "sessions" ("id" varchar not null, "user_id" integer, "ip_address" varchar, "user_agent" text, "payload" text not null, "last_activity" integer not null, primary key ("id"));
INSERT INTO sessions VALUES('GlgPcNrOHtCeiIgDTYiQFodcWgI3PokdriFOZ5zZ',1,'127.0.0.1','Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/149.0.0.0 Safari/537.36','YTo0OntzOjY6Il90b2tlbiI7czo0MDoibWRJMUluRElRcUJjdm0zekxzUW5pWWkzV1IybXhnQmowSDN1RlluMCI7czo2OiJfZmxhc2giO2E6Mjp7czozOiJvbGQiO2E6MDp7fXM6MzoibmV3IjthOjA6e319czo5OiJfcHJldmlvdXMiO2E6Mjp7czozOiJ1cmwiO3M6MzM6Imh0dHA6Ly8xMjcuMC4wLjE6ODAwMC9hZG1pbi91c2VycyI7czo1OiJyb3V0ZSI7czoxNzoiYWRtaW4udXNlcnMuaW5kZXgiO31zOjUwOiJsb2dpbl93ZWJfNTliYTM2YWRkYzJiMmY5NDAxNTgwZjAxNGM3ZjU4ZWE0ZTMwOTg5ZCI7aToxO30=',1781268475);
CREATE TABLE IF NOT EXISTS "cache" ("key" varchar not null, "value" text not null, "expiration" integer not null, primary key ("key"));
CREATE TABLE IF NOT EXISTS "cache_locks" ("key" varchar not null, "owner" varchar not null, "expiration" integer not null, primary key ("key"));
CREATE TABLE IF NOT EXISTS "jobs" ("id" integer primary key autoincrement not null, "queue" varchar not null, "payload" text not null, "attempts" integer not null, "reserved_at" integer, "available_at" integer not null, "created_at" integer not null);
CREATE TABLE IF NOT EXISTS "job_batches" ("id" varchar not null, "name" varchar not null, "total_jobs" integer not null, "pending_jobs" integer not null, "failed_jobs" integer not null, "failed_job_ids" text not null, "options" text, "cancelled_at" integer, "created_at" integer not null, "finished_at" integer, primary key ("id"));
CREATE TABLE IF NOT EXISTS "failed_jobs" ("id" integer primary key autoincrement not null, "uuid" varchar not null, "connection" text not null, "queue" text not null, "payload" text not null, "exception" text not null, "failed_at" datetime not null default CURRENT_TIMESTAMP);
CREATE TABLE IF NOT EXISTS "pets" ("id" integer primary key autoincrement not null, "user_id" integer not null, "name" varchar not null, "type" varchar not null, "breed" varchar, "age" integer not null, "weight" numeric, "photo" varchar, "health_notes" text, "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade);
INSERT INTO pets VALUES(1,2,'Luna','Cat','Persia',2,4.20000000000000017,'pets/luna-persia-cat.svg','Alergi makanan seafood.','2026-06-12 12:47:01','2026-06-12 12:47:01');
INSERT INTO pets VALUES(2,2,'Rocky','Dog','Golden Retriever',3,28.5,'pets/rocky-golden-retriever.svg','Rutin vaksin rabies tahunan.','2026-06-12 12:47:01','2026-06-12 12:47:01');
CREATE TABLE IF NOT EXISTS "addresses" ("id" integer primary key autoincrement not null, "user_id" integer not null, "label" varchar not null, "address_line" text not null, "city" varchar not null, "latitude" numeric, "longitude" numeric, "is_primary" tinyint(1) not null default '0', "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade);
INSERT INTO addresses VALUES(1,2,'Rumah Utama','Jl. Kemang Raya No. 12, Mampang Prapatan','Jakarta Selatan',-6.27350000000000029,106.820499999999995,1,'2026-06-12 12:47:01','2026-06-12 12:47:01');
INSERT INTO addresses VALUES(2,2,'Kantor','Sudirman Central Business District (SCBD) Lot 21','Jakarta Selatan',-6.22440000000000015,106.809799999999995,0,'2026-06-12 12:47:01','2026-06-12 12:47:01');
CREATE TABLE IF NOT EXISTS "services" ("id" integer primary key autoincrement not null, "provider_id" integer, "name" varchar not null, "description" text, "price" numeric not null, "duration_minutes" integer not null default '60', "provider_type" varchar, "created_at" datetime, "updated_at" datetime, foreign key("provider_id") references "users"("id") on delete cascade);
INSERT INTO services VALUES(1,NULL,'Pemeriksaan dokter','Pemeriksaan fisik lengkap hewan oleh dokter spesialis hewan klinik.',120000,60,'veterinarian','2026-06-12 12:47:01','2026-06-12 12:47:01');
INSERT INTO services VALUES(2,NULL,'Groming','Mandi bersih air hangat, potong kuku, pembersihan telinga, blow dry, dan parfum.',90000,60,'groomer','2026-06-12 12:47:02','2026-06-12 12:47:02');
CREATE TABLE IF NOT EXISTS "products" ("id" integer primary key autoincrement not null, "seller_id" integer not null, "name" varchar not null, "description" text, "price" numeric not null, "stock" integer not null default '0', "image" varchar, "created_at" datetime, "updated_at" datetime, foreign key("seller_id") references "users"("id") on delete cascade);
INSERT INTO products VALUES(1,1,'Makanan Kucing Premium Royal Canin 2kg','Nutrisi lengkap khusus pertumbuhan bulu dan daya tahan tubuh.',280000,15,'products/royal-canin-cat-food-2kg.svg','2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO products VALUES(2,1,'Shampoo Hewan FurryMagic 250ml','Mencegah ketombe, melembutkan bulu kasar, wangi lavender.',65000,20,'products/furrymagic-shampoo-250ml.svg','2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO products VALUES(3,1,'Tempat Tidur Kucing Empuk CozyNest','Diameter 40cm, bahan beludru hangat dan mudah dicuci.',110000,8,'products/cozynest-cat-bed.svg','2026-06-12 12:47:02','2026-06-12 12:47:02');
CREATE TABLE IF NOT EXISTS "provider_schedules" ("id" integer primary key autoincrement not null, "user_id" integer not null, "day_of_week" integer not null, "start_time" time not null, "end_time" time not null, "is_available" tinyint(1) not null default '1', "created_at" datetime, "updated_at" datetime, foreign key("user_id") references "users"("id") on delete cascade);
INSERT INTO provider_schedules VALUES(1,3,1,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(2,3,2,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(3,3,3,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(4,3,4,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(5,3,5,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(6,4,1,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(7,4,2,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(8,4,3,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(9,4,4,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
INSERT INTO provider_schedules VALUES(10,4,5,'07:00','17:00',1,'2026-06-12 12:47:02','2026-06-12 12:47:02');
CREATE TABLE IF NOT EXISTS "bookings" ("id" integer primary key autoincrement not null, "pet_owner_id" integer not null, "provider_id" integer not null, "pet_id" integer not null, "service_id" integer, "booking_date" date not null, "start_time" time not null, "status" varchar not null default 'pending', "total_price" numeric not null, "address_id" integer, "notes" text, "completion_notes" text, "created_at" datetime, "updated_at" datetime, foreign key("pet_owner_id") references "users"("id") on delete cascade, foreign key("provider_id") references "users"("id") on delete cascade, foreign key("pet_id") references "pets"("id") on delete cascade, foreign key("service_id") references "services"("id") on delete set null, foreign key("address_id") references "addresses"("id") on delete set null);
CREATE TABLE IF NOT EXISTS "medical_records" ("id" integer primary key autoincrement not null, "pet_id" integer not null, "vet_id" integer not null, "booking_id" integer, "visit_date" date not null, "diagnosis" text not null, "treatment" text not null, "recommendation" text, "notes" text, "pdf_path" varchar, "created_at" datetime, "updated_at" datetime, foreign key("pet_id") references "pets"("id") on delete cascade, foreign key("vet_id") references "users"("id") on delete cascade, foreign key("booking_id") references "bookings"("id") on delete set null);
CREATE TABLE IF NOT EXISTS "reviews" ("id" integer primary key autoincrement not null, "booking_id" integer, "pet_owner_id" integer not null, "provider_id" integer not null, "rating" integer not null, "comment" text, "created_at" datetime, "updated_at" datetime, foreign key("booking_id") references "bookings"("id") on delete set null, foreign key("pet_owner_id") references "users"("id") on delete cascade, foreign key("provider_id") references "users"("id") on delete cascade);
CREATE TABLE IF NOT EXISTS "orders" ("id" integer primary key autoincrement not null, "pet_owner_id" integer not null, "status" varchar not null default 'pending', "total_amount" numeric not null, "shipping_address" text not null, "payment_proof" varchar, "created_at" datetime, "updated_at" datetime, foreign key("pet_owner_id") references "users"("id") on delete cascade);
CREATE TABLE IF NOT EXISTS "order_items" ("id" integer primary key autoincrement not null, "order_id" integer not null, "product_id" integer not null, "quantity" integer not null, "price" numeric not null, "created_at" datetime, "updated_at" datetime, foreign key("order_id") references "orders"("id") on delete cascade, foreign key("product_id") references "products"("id") on delete cascade);
CREATE TABLE IF NOT EXISTS "roles" ("id" integer primary key autoincrement not null, "name" varchar not null, "created_at" datetime, "updated_at" datetime);
CREATE TABLE IF NOT EXISTS "role_user" ("id" integer primary key autoincrement not null, "role_id" integer not null, "user_id" integer not null, "created_at" datetime, "updated_at" datetime, foreign key("role_id") references "roles"("id") on delete cascade, foreign key("user_id") references "users"("id") on delete cascade);
DELETE FROM sqlite_sequence;
INSERT INTO sqlite_sequence VALUES('migrations',8);
INSERT INTO sqlite_sequence VALUES('users',5);
INSERT INTO sqlite_sequence VALUES('pets',2);
INSERT INTO sqlite_sequence VALUES('addresses',2);
INSERT INTO sqlite_sequence VALUES('services',2);
INSERT INTO sqlite_sequence VALUES('products',3);
INSERT INTO sqlite_sequence VALUES('provider_schedules',10);
CREATE UNIQUE INDEX "users_email_unique" on "users" ("email");
CREATE INDEX "sessions_user_id_index" on "sessions" ("user_id");
CREATE INDEX "sessions_last_activity_index" on "sessions" ("last_activity");
CREATE INDEX "cache_expiration_index" on "cache" ("expiration");
CREATE INDEX "cache_locks_expiration_index" on "cache_locks" ("expiration");
CREATE INDEX "jobs_queue_index" on "jobs" ("queue");
CREATE UNIQUE INDEX "failed_jobs_uuid_unique" on "failed_jobs" ("uuid");
CREATE UNIQUE INDEX "roles_name_unique" on "roles" ("name");
CREATE UNIQUE INDEX "role_user_role_id_user_id_unique" on "role_user" ("role_id", "user_id");
COMMIT;
